fix: overflow-x on timeline hotfix

--- a/styles/sana-timeline.css
+++ b/styles/sana-timeline.css
@@ -1,3 +1,7 @@
+.timeline {
+  overflow-x: hidden;
+}
+
 .timeline a {
   text-decoration: underline;
 }
